# cr8script

./: .gitignore  AGENTS.md  LICENSE  LLMS.md  LLM_MAP.md  README.md  balloon_game.html  cr8script.py  game.html  mindmap-data.json  mindmap.html  pyproject.toml
docs/: swot.md
examples/: api_ingest.cr8  hello.cr8  load_test.cr8  make_balloon_game.cr8  make_game.cr8  make_mindmap.cr8  report_md.cr8  tour.cr8  validate.cr8  weather.cr8
examples/agent_loop/: README.md  broken.cr8  diagnostics.json  fixed.cr8
examples/llm_map/: README.md  balloon_game.map.html  balloon_game.map.json
testdata/: 01_arithmetic.cr8  01_arithmetic.expected  02_control_flow.cr8  02_control_flow.expected  03_functions_records.cr8  03_functions_records.expected  04_pipelines.cr8  04_pipelines.expected  05_principles.cr8  05_principles.expected  06_strings_json.cr8  06_strings_json.expected  07_static_check.cr8  07_static_check.expected  08_csv.cr8  08_csv.expected  09_decimal.cr8  09_decimal.expected  10_group_summarize.cr8  10_group_summarize.expected
tools/: check_map.py  render_llm_map.py
