[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cr8script"
version = "1.1.0"
description = "An English-shaped scripting language for LLMs and anyone who wants quick scripts without Python's footguns."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lofi Fren" }]
requires-python = ">=3.9"
keywords = ["scripting", "language", "llm", "agents", "interpreter", "decimal", "pipelines"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://cr8script.com"
Repository = "https://github.com/LofiFren/cr8script"
Documentation = "https://cr8script.com/agents.html"

[project.scripts]
cr8script = "cr8script:main"

[tool.setuptools]
py-modules = ["cr8script"]
